# snap-translate

./: .env.example  .gitignore  AGENTS.md  README.ko.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
src/: AGENTS.md  App.tsx
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: AGENTS.md  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  errors.rs  lib.rs  logging.rs  translate_flow.rs
src-tauri/src/accessibility/: AGENTS.md  checker.rs
src-tauri/src/clipboard/: AGENTS.md  handler.rs
src-tauri/src/commands/: AGENTS.md  mod.rs  settings.rs  translate.rs
src-tauri/src/config/: AGENTS.md  store.rs
src-tauri/src/deepl/: AGENTS.md  client.rs  types.rs
src-tauri/src/hotkey/: AGENTS.md  manager.rs
src-tauri/src/key_simulator/: AGENTS.md  simulator.rs
src/components/: AGENTS.md  ApiKeyInput.module.css  ApiKeyInput.tsx  HotkeyInput.module.css  HotkeyInput.tsx  LanguageSelect.module.css  LanguageSelect.tsx
src/lib/: AGENTS.md  constants.ts  tauri.ts
src/pages/: AGENTS.md  Settings.module.css  Settings.tsx
src/types/: AGENTS.md  index.ts
tests/: AGENTS.md  setup.ts
tests/components/: AGENTS.md  ApiKeyInput.test.tsx  HotkeyInput.test.tsx  LanguageSelect.test.tsx
tests/lib/: AGENTS.md  tauri.test.ts
