[package]
name = "snap-translate"
version = "0.1.0"
description = "A lightweight translation tool using DeepL API"
authors = [""]
edition = "2021"
rust-version = "1.70"

[lib]
name = "snap_translate_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "snap-translate"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
